force-app/main/default/objects/JBCXM__GSLRMConfig__c/JBCXM__GSLRMConfig__c.object-meta.xml
<CustomObject>
    <label>GSLRMConfig</label>
    <nameField>
        <label>GSLRMConfig Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GSLRMConfig</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>