force-app/main/default/objects/JBCXM__GSLRMConfig__c/fields/JBCXM__BookingTypeLineItemMapping__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__BookingTypeLineItemMapping__c</fullName>
    <label>BookingTypeLineItemMapping</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>