force-app/main/default/objects/JBCXM__GSLRMConfig__c/fields/JBCXM__ConnectorConfig__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ConnectorConfig__c</fullName>
    <label>ConnectorConfig</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>