force-app/main/default/objects/JBCXM__GSLRMConfig__c/fields/JBCXM__ProductEnable__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ProductEnable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Enable</label>
    <type>Checkbox</type>
</CustomField>