force-app/main/default/objects/JBCXM__GSLRMConfig__c/listViews/JBCXM__All.listView-meta.xml
<ListView>
    <fullName>JBCXM__All</fullName>
    <columns>NAME</columns>
    <columns>JBCXM__BookingTypeLineItemMapping__c</columns>
    <columns>JBCXM__ConnectorConfig__c</columns>
    <columns>JBCXM__ProductEnable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>